--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: user, html: { multipart: true }) do |form| %>
   <% if user.persisted? %>
     <p class="card-text text-center">
-      <%= image_tag user.avatar_url, class: 'rounded-circle my-1', height: 160, width: 160 %> 
+      <%= image_tag user.avatar_url, id: 'user_avatar_image', class: 'rounded-circle my-1 custom-file-image', height: 160, width: 160 %> 
     </p>
   <% end %>
   <div class="form-group">
