Fixed erroraneous 'sign up' button.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -42,5 +42,5 @@
   <% user.errors.full_messages.each do |error| %>
     <div class="invalid-feedback"><%= error %></div>
   <% end %>
-  <%= form.submit 'Sign Up', class: 'btn btn-primary w-100' %>
+  <%= form.submit, class: 'btn btn-primary w-100' %>
 <% end %>
