--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="card my-2">
       <div class="card-body">
         <h5 class="card-title">Edit Album</h5>
-        <%= render 'form', user: current_user, album: @album %>
+        <%= render 'form', album: @album %>
       </div>
     </div>
   </div>
