--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -7,6 +7,6 @@
     </div>
   </div>
   <div class="col-sm-3 col-12 order-sm-2 order-1">
-    <%= render 'list', user: @album.user, album: @album %>
+    <%= render 'item', album: @album %>
   </div>
 </div>
