--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-body text-center">
     <a href="<%= user_url(user) %>">
-      <%= image_tag user.avatar_url, class: 'rounded-circle my-1', height: 160, width: 160 %>
+      <%= image_tag user.avatar, class: 'rounded-circle my-1', height: 160, width: 160 %>
     </a>
     <h4 class="card-title"><%= user.name %></h4>
     <p class="small text-muted">
