--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,5 @@
 <li class="list-group-item">
-  <%= form_with(model: [photo, comment], html: { class: 'form-inline' }, local: true) do |form| %>
-    <%= form.hidden_field :user_id, value: current_user.id %>
-    <%= form.hidden_field :photo_id, value: photo.id %>
+  <%= form_with(model: comment, html: { class: 'form-inline' }, local: true) do |form| %>
     <%= form.text_field :body, class: 'form-control w-75', placeholder: 'Leave a comment.' %>
     <%= form.submit 'Comment', class: 'btn btn-primary w-25' %>
   <% end %>
