--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
   <div class="col-sm-6 col-12">
     <div class="card my-2">
-      <%= image_tag @photo.resource_url, class: 'card-image-top', height: 500 %>
+      <%= image_tag @photo.image, class: 'card-image-top', height: 500 %>
       <div class="card-body">
         <h5 class="card-title"><%= @photo.title %></h5>
         <p class="card-text"><%= @photo.caption %></p>
