--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,12 +1,12 @@
-<div class="row">
-  <div class="col-sm-7 col-12 order-sm-1 order-2">
-    <div class="card-columns my-1">
+<div class="row row-columns-md-2">
+  <div class="col-7 order-sm-1 order-2">
+    <div class="row row-columns-lg-3 row-columns-2">
       <% Photo.where(hidden: false).order('RANDOM()').limit(6).each do |photo| %>
         <%= render 'photos/photo', photo: photo %>
       <% end %>
     </div>
   </div>
-  <div class="col-sm-5 col-12 order-sm-2 order-1">
+  <div class="col-5 order-sm-2 order-1">
     <h1 class="mt-2">The friendly photo-sharing platform.</h1>
     <p>On PhotoGo, a picture is worth a thousand words, start your story here.</p>
     <div class="card my-1">
