--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,9 +1,9 @@
-<a href="<%= photo_url(photo) %>" draggable="true" value="<%= photo.id %>" ondragstart="event.dataTransfer.setData('text/plain', null)">
+<div class="col-4 my-2">
   <div class="card text-white">
-    <img class="card-img" src="<%= photo.resource_url %>" alt="<%= photo.caption %>">
+    <%= image_tag photo.image, class: 'card-img' %>
     <div class="card-img-overlay">
       <h5 class="card-title text-white"><%= photo.title %></h5>
       <p class="card-text"><%= photo.caption %></p>
     </div>
   </div>
-</a>
+</div>
