--- a/app/views/photos/_search.html.erb
+++ b/app/views/photos/_search.html.erb
@@ -1,4 +1,4 @@
 <%= form_with(url: photos_url, method: 'get', html: { class: 'form-inline' }, local: true) do |form| %>
-  <%= form.text_field :query, class: 'form-control w-75', placeholder: 'Search photos.' %>
-  <%= form.submit 'Search', class: 'btn btn-primary px-0 w-25' %>
+  <%= form.text_field :query, class: 'form-control w-75', placeholder: 'Search photos.', style: 'float: left;' %>
+  <%= form.submit 'Search', class: 'btn btn-primary px-0 w-25', style: 'float: right;' %>
 <% end %>
